agent: complete project planning with 3 milestones and 14 tasks
Executed @acp.init and @acp.plan to establish complete project roadmap.

Changes:
- Created comprehensive remember-mcp analysis document
- Identified 9 reusable patterns for extraction
- Created 3 milestones (M1-M3) with clear deliverables
- Created 14 task documents with detailed specifications
- Organized tasks in milestone-specific directories
- Updated progress.yaml with complete planning structure

Milestones:
- M1: Pattern Documentation (7 tasks, 2-3 weeks)
- M2: Command & Design Documentation (4 tasks, 1-2 weeks)
- M3: Package Validation & Publishing (3 tasks, 1 week)

Completed:
- Task: agent/tasks/task-1-analyze-remember-mcp-patterns.md
- Planning: 100% complete

Documentation:
- Design: agent/design/remember-mcp-analysis.md
- Milestones: 3 milestone documents created
- Tasks: 14 task documents created (15 total including task-1)

Next Steps:
- Start M1: Create pattern documents (Task 2-8)
- Use @acp.proceed to begin Task 2 (Bootstrap Pattern)
- Use @acp.pattern-create for each pattern

--- a/agent/progress.yaml
+++ b/agent/progress.yaml
@@ -11,46 +11,246 @@ project:
   description: |
     ACP Package: TypeScript MCP server starter template with mcp-auth support and example tool
 
-milestones: []
+milestones:
+  - id: M1
+    name: Pattern Documentation
+    status: not_started
+    progress: 0
+    started: null
+    completed: null
+    estimated_weeks: 2-3
+    tasks_completed: 0
+    tasks_total: 7
+    notes: |
+      Extract and document all 7 reusable MCP server patterns from remember-mcp analysis.
+      Patterns cover complete development lifecycle: bootstrap, server architecture,
+      tool creation, build config, testing, and configuration management.
+  
+  - id: M2
+    name: Command & Design Documentation
+    status: not_started
+    progress: 0
+    started: null
+    completed: null
+    estimated_weeks: 1-2
+    tasks_completed: 0
+    tasks_total: 4
+    notes: |
+      Create command workflows for project scaffolding and architectural design documents.
+      Commands automate common tasks, designs explain architectural decisions.
+  
+  - id: M3
+    name: Package Validation & Publishing
+    status: not_started
+    progress: 0
+    started: null
+    completed: null
+    estimated_weeks: 1
+    tasks_completed: 0
+    tasks_total: 3
+    notes: |
+      Build example template, validate package contents, test installation workflows,
+      and publish to repository for distribution.
 
-tasks: {}
+tasks:
+  task_1:
+    - id: task-1
+      name: Analyze remember-mcp for Reusable Patterns
+      status: completed
+      file: agent/tasks/task-1-analyze-remember-mcp-patterns.md
+      estimated_hours: 4
+      actual_hours: 1
+      completed_date: 2026-02-22
+      notes: |
+        Comprehensive analysis completed. Identified 9 core patterns,
+        recommended 7 patterns to extract, 2 commands to create, and
+        2 design documents. Created detailed analysis document.
+  
+  milestone_1:
+    - id: task-2
+      name: Create Bootstrap Pattern
+      status: not_started
+      file: agent/tasks/milestone-1-pattern-documentation/task-2-bootstrap-pattern.md
+      estimated_hours: 2-3
+      actual_hours: null
+      completed_date: null
+      notes: Project initialization and directory structure pattern
+    
+    - id: task-3
+      name: Create Server Standalone Pattern
+      status: not_started
+      file: agent/tasks/milestone-1-pattern-documentation/task-3-server-standalone-pattern.md
+      estimated_hours: 3-4
+      actual_hours: null
+      completed_date: null
+      notes: Standalone server with stdio transport pattern
+    
+    - id: task-4
+      name: Create Server Factory Pattern
+      status: not_started
+      file: agent/tasks/milestone-1-pattern-documentation/task-4-server-factory-pattern.md
+      estimated_hours: 3-4
+      actual_hours: null
+      completed_date: null
+      notes: Factory pattern for mcp-auth integration
+    
+    - id: task-5
+      name: Create Tool Creation Pattern
+      status: not_started
+      file: agent/tasks/milestone-1-pattern-documentation/task-5-tool-creation-pattern.md
+      estimated_hours: 3-4
+      actual_hours: null
+      completed_date: null
+      notes: MCP tool definition and handler pattern
+    
+    - id: task-6
+      name: Create Build Config Pattern
+      status: not_started
+      file: agent/tasks/milestone-1-pattern-documentation/task-6-build-config-pattern.md
+      estimated_hours: 2-3
+      actual_hours: null
+      completed_date: null
+      notes: esbuild dual build configuration pattern
+    
+    - id: task-7
+      name: Create Test Config Pattern
+      status: not_started
+      file: agent/tasks/milestone-1-pattern-documentation/task-7-test-config-pattern.md
+      estimated_hours: 2-3
+      actual_hours: null
+      completed_date: null
+      notes: Jest + TypeScript ESM testing pattern
+    
+    - id: task-8
+      name: Create Config Management Pattern
+      status: not_started
+      file: agent/tasks/milestone-1-pattern-documentation/task-8-config-management-pattern.md
+      estimated_hours: 2-3
+      actual_hours: null
+      completed_date: null
+      notes: Environment variable and validation pattern
+  
+  milestone_2:
+    - id: task-9
+      name: Create init-project Command
+      status: not_started
+      file: agent/tasks/milestone-2-command-design-documentation/task-9-init-project-command.md
+      estimated_hours: 3-4
+      actual_hours: null
+      completed_date: null
+      notes: Command workflow for initializing new MCP server projects
+    
+    - id: task-10
+      name: Create add-tool Command
+      status: not_started
+      file: agent/tasks/milestone-2-command-design-documentation/task-10-add-tool-command.md
+      estimated_hours: 2-3
+      actual_hours: null
+      completed_date: null
+      notes: Command workflow for generating tool scaffolding
+    
+    - id: task-11
+      name: Create Architecture Design Document
+      status: not_started
+      file: agent/tasks/milestone-2-command-design-documentation/task-11-architecture-design.md
+      estimated_hours: 2-3
+      actual_hours: null
+      completed_date: null
+      notes: Overall architecture and dual export pattern design
+    
+    - id: task-12
+      name: Create mcp-auth Integration Design Document
+      status: not_started
+      file: agent/tasks/milestone-2-command-design-documentation/task-12-mcp-auth-integration-design.md
+      estimated_hours: 2-3
+      actual_hours: null
+      completed_date: null
+      notes: Multi-tenancy and authentication design
+  
+  milestone_3:
+    - id: task-13
+      name: Build Example Starter Template
+      status: not_started
+      file: agent/tasks/milestone-3-package-validation-publishing/task-13-build-example-template.md
+      estimated_hours: 3-4
+      actual_hours: null
+      completed_date: null
+      notes: Minimal working MCP server example (optional)
+    
+    - id: task-14
+      name: Validate Package and Test Installation
+      status: not_started
+      file: agent/tasks/milestone-3-package-validation-publishing/task-14-validate-and-test.md
+      estimated_hours: 2-3
+      actual_hours: null
+      completed_date: null
+      notes: Package validation and installation testing
+    
+    - id: task-15
+      name: Publish Package to Repository
+      status: not_started
+      file: agent/tasks/milestone-3-package-validation-publishing/task-15-publish-package.md
+      estimated_hours: 1-2
+      actual_hours: null
+      completed_date: null
+      notes: Release v1.0.0 with changelog and git tags
 
 documentation:
-  design_documents: 0
-  milestone_documents: 0
+  design_documents: 1
+  milestone_documents: 3
   pattern_documents: 0
-  task_documents: 0
+  task_documents: 15
   command_documents: 0
   last_updated: 2026-02-22
 
 progress:
-  planning: 0
+  planning: 100
   implementation: 0
   testing: 0
-  documentation: 0
-  overall: 0
+  documentation: 25
+  overall: 20
 
 recent_work:
   - date: 2026-02-22
     description: |
-      📦 Package Created: mcp-server-starter
-      Initial package structure created. Ready for content development.
+      🔍 @acp.init Executed: Context Initialized & Analysis Complete
+      Performed comprehensive initialization and analysis of remember-mcp project.
     items:
-      - ✅ Created package.yaml with metadata
-      - ✅ Installed full ACP (templates, commands, scripts)
-      - ✅ Created README.md, LICENSE, CHANGELOG.md
-      - ✅ Initialized git repository
-      - ✅ Installed pre-commit hook
-      - ✅ Created progress.yaml for development tracking
-      - 📋 Ready to add content with entity creation commands
+      - ✅ Checked for ACP updates (v3.9.0 - up to date)
+      - ✅ Read all agent documentation (progress.yaml, manifest.yaml, task-1)
+      - ✅ Checked for global packages (none found)
+      - ✅ Reviewed remember-mcp project structure
+      - ✅ Analyzed package.json, tsconfig.json, build config
+      - ✅ Studied MCP server implementation (server.ts, server-factory.ts)
+      - ✅ Examined tool creation patterns (create-memory.ts example)
+      - ✅ Reviewed build tooling (esbuild dual build)
+      - ✅ Analyzed testing setup (Jest + ts-jest ESM)
+      - ✅ Studied configuration management (config.ts, .env.example)
+      - ✅ Created comprehensive analysis document (agent/design/remember-mcp-analysis.md)
+      - ✅ Identified 9 reusable patterns for extraction
+      - ✅ Documented recommendations for 7 patterns, 2 commands, 2 designs
+      - ✅ Task 1 completed successfully
+  
+  - date: 2026-02-22
+    description: |
+      📋 @acp.plan Executed: Complete Project Planning
+      Created 3 milestones with 14 tasks for package development.
+    items:
+      - ✅ Created Milestone 1: Pattern Documentation (7 tasks, 2-3 weeks)
+      - ✅ Created Milestone 2: Command & Design Documentation (4 tasks, 1-2 weeks)
+      - ✅ Created Milestone 3: Package Validation & Publishing (3 tasks, 1 week)
+      - ✅ Created 14 task documents with complete specifications
+      - ✅ Organized tasks in milestone-specific directories
+      - ✅ Updated progress.yaml with all milestones and tasks
+      - ✅ Established clear dependencies and workflow
+      - ✅ Estimated 4-6 weeks total development time
 
 next_steps:
-  - Add patterns using @acp.pattern-create
-  - Add commands using @acp.command-create
-  - Add designs using @acp.design-create
-  - Create milestones and tasks as needed
-  - Validate package with @acp.package-validate
-  - Publish with @acp.package-publish
+  - Start Milestone 1: Create pattern documents (Task 2-8)
+  - Use @acp.proceed to begin Task 2 (Bootstrap Pattern)
+  - Use @acp.pattern-create for each pattern
+  - Update package.yaml as patterns are created
+  - Validate patterns with @acp.package-validate
 
 notes:
   - This is an ACP package repository
