refactor: rename init-project command to init
Simplified command name for better usability.

Changes:
- Renamed task-9-init-project-command.md to task-9-init-command.md
- Updated task document to reference mcp-server-starter.init.md
- Updated progress.yaml with new task name
- Command invocation: @mcp-server-starter.init (was @mcp-server-starter.init-project)

Rationale:
- Shorter, clearer command name
- Follows common CLI conventions (git init, npm init)
- Easier to type and remember

--- a/agent/progress.yaml
+++ b/agent/progress.yaml
@@ -146,9 +146,9 @@ tasks:
   
   milestone_2:
     - id: task-9
-      name: Create init-project Command
+      name: Create init Command
       status: not_started
-      file: agent/tasks/milestone-2-command-design-documentation/task-9-init-project-command.md
+      file: agent/tasks/milestone-2-command-design-documentation/task-9-init-command.md
       estimated_hours: 3-4
       actual_hours: null
       completed_date: null
